--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Doctor cardiologo en Guadalajara, cerca de ti </title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="css/principal.css"/>
+    <link rel="stylesheet" href="css/principal.css">
 
 
 </head>
