--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Doctor cardiologo en Guadalajara, cerca de ti </title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="css/principal.css"/>
-    <link rel="stylesheet" href="css/principal.css" type="text">
+    <link rel="stylesheet" type="text/css" href="css/principal.css" >
 
 
 </head>
