--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Doctor cardiologo en Guadalajara, cerca de ti </title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="css/principal.css"/>
-    <link rel="stylesheet" type="text/css" href="gitdejuanito/Entrega_FinalArana/css/principal.css">
+    <link rel="stylesheet" type="text/css" href="https://gitdejuanito.github.io/Entrega_FinalArana/css/principal.css">
 
 
 </head>
