--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <title>Doctor cardiologo en Guadalajara, cerca de ti </title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="principal.css"/>
-    <link rel="stylesheet" type="text/css" href="https://gitdejuanito.github.io/Entrega_FinalArana/css/principal.css">
+    <link rel="stylesheet" type="text/css" href="/Entrega_FinalArana/css/principal.css">
 
 
 </head>
