--- a/conoceme.html
+++ b/conoceme.html
@@ -72,7 +72,7 @@
                                     herramienta diagnóstica no invasiva.   </p> </div>
                                     
                                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" >
-                                        <img class="" alt="doctor" src="imagenes/doctor.jpg" width="350px" >
+                                        <img class="" alt="doctor" src="Imagenes/doctor.jpg" width="350px" >
 
                                     </div>
 
