--- a/Ubicacion.html
+++ b/Ubicacion.html
@@ -61,19 +61,19 @@
 
 <div class="row mt-5">
     <div class="col-4"> <div class="card" >
-        <img src="imagenes/consultorio1.jpg" class="card-img-top" alt="...">
+        <img src="Imagenes/consultorio1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Nuestro profesionalismo y compromiso es lo que nos diferencia.</p>
         </div>
       </div></div>
     <div class="col-4"> <div class="card" >
-        <img src="imagenes/consultorio2.jpg" class="card-img-top" alt="...">
+        <img src="Imagenes/consultorio2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Ubicación en una de las mejores torres médicas.</p>
         </div>
       </div></div>
     <div class="col-4"> <div class="card">
-        <img src="imagenes/consultorio3.jpg" class="card-img-top" alt="...">
+        <img src="Imagenes/consultorio3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Contamos con el equipo más actualizado para cualquier consulta.</p>
         </div>
