--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Página principal</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="conoceme.html">Conoceme</a>
+                    <a class="nav-link active" href="conoceme.html">Conóceme</a>
                   </li>
     
                   <li class="nav-item">
