--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    
         
 <div class= "row">
-    <div class="col-xs-2 col-sm-3 col-md-4 col-lg-2"> <img src="https://github.com/gitdejuanito/Entrega_FinalArana/imagenes/logo.jpg" width="340" class="rounded float-start"></div>
+    <div class="col-xs-2 col-sm-3 col-md-4 col-lg-2"> <img src="Imagenes/logo.jpg" width="340" class="rounded float-start"></div>
     
 
     <div class="mt-5 col-xs-5 col-sm-9 col-md-8 col-lg-8"> <h1 class="text-center">Consulta de medicina interna y Cardilogía de <br>calidad</h1> </div>
